--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>hystrix-service</module>
         <module>feign-service</module>
         <module>zuul-proxy</module>
+        <module>config-server</module>
     </modules>
 
     <!--父项目指定boot依赖-->
