--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>feign-service</module>
         <module>zuul-proxy</module>
         <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
     <!--父项目指定boot依赖-->
