--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -15,3 +15,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8220/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'refresh'
