--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>zuul-proxy</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>config-security-server</module>
     </modules>
 
     <!--父项目指定boot依赖-->
