分佈式鏈路

--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--分佈式鏈路跟蹤-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
