--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -3,6 +3,12 @@ server:
 spring:
   application:
     name: eureka-client
+    # 用於鏈路跟蹤，需要下載zipkin-server，9411是其端口
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 0.1 # 抽樣概率
 eureka:
 #  instance:
 #    instanceId: ${spring.application.name}
