--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>config-server</module>
         <module>config-client</module>
         <module>config-security-server</module>
+        <module>api-gateway</module>
     </modules>
 
     <!--父项目指定boot依赖-->
