--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>config-client</module>
         <module>config-security-server</module>
         <module>api-gateway</module>
+        <module>admin-server</module>
+        <module>admin-client</module>
     </modules>
 
     <!--父项目指定boot依赖-->
