--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>api-gateway</module>
         <module>admin-server</module>
         <module>admin-client</module>
+        <module>admin-security-server</module>
     </modules>
 
     <!--父项目指定boot依赖-->
