--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>admin-server</module>
         <module>admin-client</module>
         <module>admin-security-server</module>
+        <module>oauth2-server</module>
     </modules>
 
     <!--父项目指定boot依赖-->
