--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>admin-client</module>
         <module>admin-security-server</module>
         <module>oauth2-server</module>
+        <module>oauth2-jwt-server</module>
     </modules>
 
     <!--父项目指定boot依赖-->
